[tool.poetry]
name = "IreneAPIWrapper"
version = "2.3.4"
description = "The Wrapper for the Websocket and REST API of Irene."
authors = ["MujyKun <mujy@irenebot.com>"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
]
readme = "README.md"
repository = "https://github.com/MujyKun/IreneAPIWrapper"
license = "MIT"
packages = [
        {include = "IreneAPIWrapper"}
]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
black = "^22.8.0"
pre-commit = "2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"